#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#
# configure.ac for Alien Arena data in tactical subdirectory
#
# for package construction only, no executable code.
#
# Alien Arena game art, audio and other resources are licensed
# separately from the GPL2 licensed source code.
#

AC_PREREQ([2.68])
AC_INIT([alienarena-tactical], [7.66.1])
AC_CONFIG_SRCDIR([default.cfg])
dnl AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE( 1.11.1 foreign )

AM_MAINTAINER_MODE

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
