# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

envdir=$(pkgdatadir)/data1/env

nobase_dist_env_DATA = \
	alienbk.tga \
	aliendn.tga \
	alienft.tga \
	alienlf.tga \
	alienrt.tga \
	alienup.tga \
	deadcitybk.tga \
	deadcitydn.tga \
	deadcityft.tga \
	deadcitylf.tga \
	deadcityrt.tga \
	deadcityup.tga \
	desertbk.jpg \
	desertdn.jpg \
	desertft.jpg \
	desertlf.jpg \
	desertrt.jpg \
	desertup.jpg \
	egyptbk.tga \
	egyptdn.tga \
	egyptft.tga \
	egyptlf.tga \
	egyptrt.tga \
	egyptup.tga \
	greenbk.tga \
	greendn.tga \
	greenft.tga \
	greenlf.tga \
	greenrt.tga \
	greenup.tga \
	hellbk.tga \
	helldn.tga \
	hellft.tga \
	helllf.tga \
	hellrt.tga \
	hellup.tga \
	martianbk.tga \
	martiandn.tga \
	martianft.tga \
	martianlf.tga \
	martianrt.tga \
	martianup.tga \
	seabk.tga \
	seadn.tga \
	seaft.tga \
	sealf.tga \
	seart.tga \
	seaup.tga \
	space1bk.tga \
	space1dn.tga \
	space1ft.tga \
	space1lf.tga \
	space1rt.tga \
	space1up.tga \
	tekcitybk.tga \
	tekcitydn.tga \
	tekcityft.tga \
	tekcitylf.tga \
	tekcityrt.tga \
	tekcityup.tga
