# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

gfxdir=$(pkgdatadir)/data1/gfx

nobase_dist_gfx_DATA = \
	aaglow.tga \
	adrenalbase.tga \
	adrenalmask.tga \
	annhiliationreflection.jpg \
	alienarena2gl.tga \
	bannerfx.tga \
	bconsole2.tga \
	bconsole.tga \
	beam1.tga \
	beam2.tga \
	beam3.tga \
	beam4.tga \
	beamfx.tga \
	beamgunfx.tga \
	blasterfx.tga \
	blooddrops.jpg \
	blooddrops_nm.jpg \
	bluecyborgfx.tga \
	blueenforcerfx.tga \
	bluelightning2.tga \
	bluelightning.tga \
	bluemartianfx.tga \
	blueoverlordfx.tga \
	bluewarriorfx.tga \
	bubbles.tga \
	caustics.tga \
	chrome2.tga \
	chrome.tga \
	citymask.tga \
	cloudsspace.tga \
	clouds.tga \
	cloudsthick.tga \
	comp1.tga \
	comp2.tga \
	cpribeyereflection.tga \
	defaultcommanderfx.tga \
	defaultcyborgfx.tga \
	defaultenforcerfx.tga \
	defaultlaurenfx.tga \
	defaultmartianfx.tga \
	defaultoverlordfx.tga \
	defaultslashbotfx.tga \
	defaultwarriorfx.tga \
	disruptorfx.tga \
	disruptormask.tga \
	distortwave.jpg \
	dmaquousreflection.tga \
	dmbeyondreflection.tga \
	dmdreadreflection.tga \
	dmturboreflection.tga \
	droplets.jpg \
	e6launchengine_fx.tga \
	e6launchengine_glow.tga \
	e6launchengine_mask.tga \
	e8_jumppad02_fx.tga \
	e8_jumppad02_mask.tga \
	e8_launchpad1_fx1.tga \
	e8_launchpad1_fx2.tga \
	e8_launchpad1_mask2.tga \
	egypt5_mask.tga \
	electrics2.tga \
	electrics3a.tga \
	electrics3b.tga \
	electrics3d.tga \
	electrics3.tga \
	electrics.tga \
	flamethrower_fx.tga \
	flares/flare0.tga \
	flares/flare1.tga \
	flares/flare2.tga \
	flash_noise.jpg \
	flash.tga \
	gamarafx.tga \
	glightning.tga \
	gold.tga \
	grapplefx.tga \
	grass.tga \
	grchrome.tga \
	greencircuit2.tga \
	greencircuit.tga \
	greenlightning.tga \
	greenline.tga \
	hconsole2.tga \
	hconsole3.tga \
	hconsole.tga \
	hoverfx.tga \
	leaves1.tga \
	lightning.tga \
	m_banner_main_mask.tga \
	menubar1.tga \
	menubar2.tga \
	menubar3.tga \
	menubar4.tga \
	metal3glow.tga \
	metalenvmap.jpg \
	minderaser_fx.tga \
	mirrorspec.tga \
	newblasterfx.tga \
	noise.tga \
	plate5fx.tga \
	purpleline.tga \
	quadbase.tga \
	radar/around.tga \
	rain_a.tga \
	rainfxa.tga \
	rainfxb.tga \
	rainfxc.tga \
	rainfxd.tga \
	rainfxe.tga \
	rainfxf.tga \
	rainfxg.tga \
	rainfxh.tga \
	rain.tga \
	rayfx.tga \
	redcircuit.tga \
	redlightning.tga \
	reflect.tga \
	rlauncherfx.tga \
	r_lightning.tga \
	sconsole.tga \
	shard_fx.tga \
	shardmask.tga \
	skullglow.tga \
	smartgunmask.tga \
	stepside_mtl4light_fx1.tga \
	sun1.jpg \
	sun2.jpg \
	sun.jpg \
	tekwallmask.tga \
	trim2mask.tga \
	vaporbase.tga \
	vapormask.tga \
	violator2fx.tga \
	violatorfx.tga \
	water/distort1.tga \
	water/normal1.tga \
	weed1.tga \
	weed2.tga \
	weed3.tga \
	weed4.tga \
	yellowline.tga
