# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

scriptsdir=$(pkgdatadir)/data1/scripts

nobase_dist_scripts_DATA = \
	caustics.rscript \
	consoles.rscript \
	interactive/textures.rscript \
	maps/aoa-atlantis.rscript \
	maps/aoa-corrosion.rscript \
	maps/aoa-frost2k9.rscript \
	maps/aoa-morpheus.rscript \
	maps/aoa-zorn.rscript \
	maps/ctf-corrosion.rscript \
	maps/ctf-cryogenic.rscript \
	maps/ctf-extermination.rscript \
	maps/ctf-frost2k15.rscript \
	maps/ctf-frostbyte.rscript \
	maps/ctf-goregrinder.rscript \
	maps/ctf-invasion.rscript \
	maps/ctf-oblivion.rscript \
	maps/ctf-purgatory.rscript \
	maps/ctf-titan2k8.rscript \
	maps/ctf-vesuvius2k11.rscript \
	maps/ctf-violator.rscript \
	maps/ctf-zion2k9.rscript \
	maps/dm-annihilation.rscript \
	maps/dm-atlantis2k8.rscript \
	maps/dm-babel2k11.rscript \
	maps/dm-bloodfactory2k12.rscript \
	maps/dm-bloodfactory2k15.rscript \
	maps/dm-chasmatic2k9.rscript \
	maps/dm-command2k9.rscript \
	maps/dm-corrosion.rscript \
	maps/dm-crucible2k12.rscript \
	maps/dm-deathray.rscript \
	maps/dm-deimos2k9.rscript \
	maps/dm-dismal2k11.rscript \
	maps/dm-dismal2k15.rscript \
	maps/dm-downfall.rscript \
	maps/dm-dynamo2k12.rscript \
	maps/dm-eternal.rscript \
	maps/dm-extermination.rscript \
	maps/dm-extermination2k15.rscript \
	maps/dm-furious2k8.rscript \
	maps/dm-goregrinder.rscript \
	maps/dm-horus.rscript \
	maps/dm-impact.rscript \
	maps/dm-invasion.rscript \
	maps/dm-leviathan2k12.rscript \
	maps/dm-liberation.rscript \
	maps/dm-neptune.rscript \
	maps/dm-neptune2k15.rscript \
	maps/dm-oblivion.rscript \
	maps/dm-oblivion2k15.rscript \
	maps/dm-omega2k8.rscript \
	maps/dm-purgatory.rscript \
	maps/dm-saucer2k9.rscript \
	maps/dm-turbo2k15.rscript \
	maps/dm-turbo2k8.rscript \
	maps/dm-vesuvius2k11.rscript \
	maps/dm-violator2k11.rscript \
	maps/dm-violator2k15.rscript \
	maps/dm-warmachine2k10.rscript \
	maps/dm-wasteland.rscript \
	maps/dm-zorn2k11.rscript \
	maps/dm-zion2k9.rscript \
	maps/tac-extermination.rscript \
	maps/tac-impact.rscript \
	maps/tca-corrosion.rscript \
	maps/tca-cryogenic.rscript \
	maps/tca-extermination.rscript \
	maps/tca-purgatory.rscript \
	maps/tca-zion2k9.rscript \
	menu.rscript \
	normals/desert.rscript \
	normals/gothic.rscript \
	normals/newtech.rscript \
	normals/normals.rscript \
	normals/undersea.rscript \
	normals/urban.rscript \
	textures.rscript

